build: view transactions page (fetching and grouping transactions)

--- a/src/components/TransactionList/TransactionList.scss
+++ b/src/components/TransactionList/TransactionList.scss
@@ -54,7 +54,7 @@ $transaction-font-weight: 700;
 		strong {
 			font-weight: $transaction-font-weight;
     		font-size: $transaction-font-size;
-			color: red;
+			// color: red;
 		}
 	}
 
