enhanced Action Boxes UI (dashboard)

--- a/src/layout/Content/ActionBoxes/ActionBoxes.scss
+++ b/src/layout/Content/ActionBoxes/ActionBoxes.scss
@@ -1,3 +1,10 @@
 .action-box {
 	text-decoration: none;
+	position: relative;
+
+	svg {
+		position: absolute;
+		font-size: 17rem;
+		opacity: 0.125;
+	}
 }
